# PyHilbert

./: .gitignore  .pre-commit-config.yaml  README.md  bugfix.md  c3.txt  cubictest.ipynb  diamond.ipynb  diamond_model.py  diamond_model_plot.py  fcc_weyl_model.py  mkdocs.yml  plot_test.py  plot_test2.py  plot_test_new.py  precision_analysis.md  pyproject.toml  test.ipynb  test.py  test2.py  test3.py  test_diamond_plot.py  testplot.py  testplot2.py  testplot3.py  tox.ini
.github/workflows/: ci.yml
docs/: gen_ref_pages.py  plot-methods.md
docs/javascripts/: mathjax.js
ext/plots/: pyproject.toml
ext/plots/src/qten_plots/: __init__.py  _mpl_impl.py  _plotly_impl.py  _utils.py  plottables.py
src/pyhilbert/: __init__.py  abstracts.py  affine_transform.py  basis_transform.py  boundary.py  decompose.py  fourier.py  hilbert.py  hilbert_space.py  hilbert_space.pyi  io.py  main.py  old_version_plot.py  plot.py  plots.py  plots_mpl.py  precision.py  spatials.py  state_space.py  tensors.py  transform.py  utils.py  validations.py
src/pyhilbert/validations/: _validations.py
src/qten/: __init__.py  abstracts.py  affine_transform.py  bands.py  basis_transform.py  decompose.py  fourier.py  hilbert_space.py  hilbert_space.pyi  io.py  modules.py  ops.py  optim.py  plots.py  plots_mpl.py  spatials.py  symbolics.py  tensors.py  utils.py
src/qten/geometries/: __init__.py  basis_transform.py  boundary.py  fourier.py  fourier.pyi  ops.py  spatials.py
src/qten/linalg/: _mb_tensor.py  decompose.py  tensors.py  tensors.pyi
src/qten/phys/: __init__.py  _bonds.py  _ff_observables.py
src/qten/plottings/: __init__.py  _mpl_impl.py  _plotly_impl.py
src/qten/pointgroups/: __init__.py  _pointgroups.py  abelian.py  nonabelian.py  ops.py
src/qten/symbolics/: __init__.py  base.py  hilbert_space.py  ops.py  state_space.py  state_space.pyi
src/qten/utils/: collections_ext.py  devices.py  io.py  loggings.py  types_ext.py
src/qten/validations/: __init__.py  _validations.py  symbolics.py
tests/: test_abelian.py  test_abstracts.py  test_affine_transform.py  test_bands.py  test_basis_transform.py  test_boundary.py  test_decompose.py  test_fourier.py  test_geometry_ops.py  test_groups.py  test_hilbert.py  test_io.py  test_modules.py  test_momentum_block_tensor.py  test_nonabelian.py  test_plots.py  test_pointgroup_ops.py  test_precision.py  test_shift.py  test_spatials.py  test_state_space_validations.py  test_tensors.py  test_tensors_autograd.py  test_tensors_cross_device.py  test_tensors_indexing.py  test_transform.py  test_utils.py  test_validation.py  test_validations.py
