[project]
name = "pyhilbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "multipledispatch>=1.0.0",
    "pandas>=2.3.3",
    "sympy>=1.14.0",
    "plotly>=6.5.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu126 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu129 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu130 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
package = true

conflicts = [
  [ { extra = "cpu" }, { extra = "cu126" }, { extra = "cu128" }, { extra = "cu129" }, { extra = "cu130" } ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cu126"},
  { index = "pytorch-cu128", extra = "cu128"},
  { index = "pytorch-cu129", extra = "cu129"},
  { index = "pytorch-cu130", extra = "cu130"},
  { index = "pypi", extra = "cpu" },
]

torchvision = [
  { index = "pytorch-cu126", extra = "cu126"},
  { index = "pytorch-cu128", extra = "cu128"},
  { index = "pytorch-cu129", extra = "cu129"},
  { index = "pytorch-cu130", extra = "cu130"},
  { index = "pypi", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url  = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url  = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url  = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"